<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center|top"
    tools:context="co.forum.app.OnBoardingActivity.Tab_Login">

    <LinearLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <co.forum.app.tools.NonSwipeableViewPager
            android:id="@+id/loginFormPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <LinearLayout
            android:id="@+id/logo_forum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gradient_black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:gravity="center"
                android:paddingTop="30dp"
                android:text="@string/app_name_min"
                android:textSize="50dp"
                android:textStyle="bold" />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/app_version"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
