<RelativeLayout
    android:id="@+id/bio_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProfil_BG"
    android:orientation="vertical"
    android:padding="12dp"
    android:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/bio_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorProfil_BG"
        android:gravity="top|left"
        android:hint="@string/write_a_short_presentation"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/colorProfil_Text2"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/btn_optional_link"
        android:layout_below="@+id/bio_edit_text"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sl_card_header"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:gravity="center|left"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:alpha="0.4"
            android:src="@drawable/ic_link_variant_grey600_48dp" />

        <TextView
            android:id="@+id/optional_link"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/tag_on"
            android:text="@string/optional_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- counter thought char -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey3"
            android:textStyle="italic"
            android:text="@string/edit_your_bio"/>

        <TextView
            android:id="@+id/tv_count_bio_chars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="140"
            android:textColor="@color/grey2"
            android:textSize="13sp"
            android:textStyle="italic"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>